# autoresearch

./: .gitignore  README.md  train.py
.claude-resume/: README.md  plan.md  redesign-plan.md  restore.sh
.claude/skills/new-task/: SKILL.md
autoresearch/: prepare.py  train.py
autoresearch/.torchinductor-cache/er/: cerqwr2sl6dfko6xohumedglyawjtpujobyv7ngoxqkhyubilcfy.py
autoresearch/.torchinductor-cache/jh/: cjhrelllpbynmmpooor7zsp7ryv6fintnhzryjiplm4khvxhgzvb.py
autoresearch/.torchinductor-cache/m6/: cm6ytchdkavcrrlrwtg6uywejzghbwhvpubkwdig7hywdrawdhvy.py
autoresearch/.torchinductor-cache/so/: csoqi5loot2syj3opnvkbtcfphexvxkfslaephryhvw7yrmtvnkd.py
autoresearch/.torchinductor-cache/up/: cupwgsgjvhgcbqgqgbfkiu6l6p2larwqzdsyvchbnutznvrloiif.py
docs/: architecture.md
docs/notes/: CHANGELOG.md  LOCAL_MULTIAGENT_PLAN.md  PROGRESS_CHECKLIST.md
docs/paper/: README.md  icml-workshop.tex  old.tex  references.bib
experiments/0024_adambeta_09/: experiment.md  metrics.json  result.txt  run.env
infra/hpc_agent/: .env.example  .gitignore  README.md  setup.sh
tasks/autoresearch/: baseline-submit.sbatch  create-full.js  create-smoke.js  manager-full.js  manager-smoke.js  mock-worker.sh  sandbox.sh  submit.sbatch  worker.sh
tasks/qwen-sft/: README.md  baseline-submit.sbatch  create-explicit.js  create-naive.js  create.js  experiment.md  manager-explicit.js  manager-naive.js  manager.js  sandbox.sh  submit-explicit.sbatch  submit-naive.sbatch  submit.sbatch  worker.sh
tasks/qwen-sft/source/: .gitignore  prepare.py  program.md  pyproject.toml  train.py
(+3197 files in other folders)
